// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`accepts a port to run on 1`] = `
"
> storybook-for-react-integration-tests@3.1.0 storybook:axeOnly
> axe-storybook --port 8111

Serving up 🍕 static storybook build at: http://127.0.0.1:8111

[chromium] accessibility
  advanced
    1) Branding

  autoTitles
    ✔ No Failures

  delays
    ✔ Short Delay And Pass
    2) Short Delay And Fail
    ✔ Medium Delay And Pass
    3) Medium Delay And Fail
    4) Medium Delay And Short Timeout Fail
    5) Long Delay And Timeout

  simple
    ✔ No Failures
    6) Failure No Discernible Text
    7) Failure Color Contrast
    8) Failure No Discernible Text And Invalid Role
    - Failure Color Contrast Skipped
    - No Failures Warn
    - Failure Color Contrast Warn
    - Failure No Discernible Text Warn
    - Failure Color Contrast Off
    - Failure No Discernible Text And Invalid Role Skipped
    ✔ Failure Color Contrast Disabled Rule
    9) Failure No Discernible Text And Invalid Role Disabled One Rule
    ✔ Failure No Discernible Text And Invalid Role Disabled Rules

2 violations were detected in stories with "mode" set to "warn", so did not fail the test suite:

 Error: simple / Failure Color Contrast Warn / Detected the following accessibility violations!

     1. color-contrast (Elements must meet minimum color contrast ratio thresholds)

        For more info, visit https://dequeuniversity.com/rules/axe/4.9/color-contrast?application=axeAPI.

        Check these nodes:

        - html: <button style="background-color: red; color: hotpink;">hello world</button>
          summary: Fix any of the following:
                     Element has insufficient color contrast of 1.51 (foreground color: #ff69b4, background color: #ff0000, font size: 10.0pt (13.3333px), font weight: normal). Expected contrast ratio of 4.5:1

Error: simple / Failure No Discernible Text Warn / Detected the following accessibility violations!

     1. button-name (Buttons must have discernible text)

        For more info, visit https://dequeuniversity.com/rules/axe/4.9/button-name?application=axeAPI.

        Check these nodes:

        - html: <button></button>
          summary: Fix any of the following:
                     Element does not have inner text that is visible to screen readers
                     aria-label attribute does not exist or is empty
                     aria-labelledby attribute does not exist, references elements that do not exist or references elements that are empty
                     Element has no title attribute
                     Element's default semantics were not overridden with role="none" or role="presentation"

  6 passing
  6 pending
  9 failing

  1) advanced
       Branding:
     Detected the following accessibility violations!

     1. color-contrast (Elements must meet minimum color contrast ratio thresholds)

        For more info, visit https://dequeuniversity.com/rules/axe/4.9/color-contrast?application=my-branding.

        Check these nodes:

        - html: <button style="background-color: red; color: hotpink;">hello world</button>
          summary: Fix any of the following:
                     Element has insufficient color contrast of 1.51 (foreground color: #ff69b4, background color: #ff0000, font size: 10.0pt (13.3333px), font weight: normal). Expected contrast ratio of 4.5:1
  

  2) delays
       Short Delay And Fail:
     Detected the following accessibility violations!

     1. aria-roles (ARIA roles used must conform to valid values)

        For more info, visit https://dequeuniversity.com/rules/axe/4.9/aria-roles?application=axeAPI.

        Check these nodes:

        - html: <button id="hi" role="wut-the-wut">hello world</button>
          summary: Fix all of the following:
                     Role must be one of the valid ARIA roles: wut-the-wut
  

  3) delays
       Medium Delay And Fail:
     Detected the following accessibility violations!

     1. aria-roles (ARIA roles used must conform to valid values)

        For more info, visit https://dequeuniversity.com/rules/axe/4.9/aria-roles?application=axeAPI.

        Check these nodes:

        - html: <button id="hi" role="wut-the-wut">hello world</button>
          summary: Fix all of the following:
                     Role must be one of the valid ARIA roles: wut-the-wut
  

  4) delays
       Medium Delay And Short Timeout Fail:
     Error: Timeout of 100ms exceeded. For async tests and hooks, ensure "done()" is called; if returning a Promise, ensure it resolves.
      at listOnTimeout (node:internal/timers)
      at processTimers (node:internal/timers)

  5) delays
       Long Delay And Timeout:
     Error: Timeout of 2000ms exceeded. For async tests and hooks, ensure "done()" is called; if returning a Promise, ensure it resolves.
      at listOnTimeout (node:internal/timers)
      at processTimers (node:internal/timers)

  6) simple
       Failure No Discernible Text:
     Detected the following accessibility violations!

     1. button-name (Buttons must have discernible text)

        For more info, visit https://dequeuniversity.com/rules/axe/4.9/button-name?application=axeAPI.

        Check these nodes:

        - html: <button></button>
          summary: Fix any of the following:
                     Element does not have inner text that is visible to screen readers
                     aria-label attribute does not exist or is empty
                     aria-labelledby attribute does not exist, references elements that do not exist or references elements that are empty
                     Element has no title attribute
                     Element's default semantics were not overridden with role="none" or role="presentation"
  

  7) simple
       Failure Color Contrast:
     Detected the following accessibility violations!

     1. color-contrast (Elements must meet minimum color contrast ratio thresholds)

        For more info, visit https://dequeuniversity.com/rules/axe/4.9/color-contrast?application=axeAPI.

        Check these nodes:

        - html: <button style="background-color: red; color: hotpink;">hello world</button>
          summary: Fix any of the following:
                     Element has insufficient color contrast of 1.51 (foreground color: #ff69b4, background color: #ff0000, font size: 10.0pt (13.3333px), font weight: normal). Expected contrast ratio of 4.5:1
  

  8) simple
       Failure No Discernible Text And Invalid Role:
     Detected the following accessibility violations!

     1. aria-roles (ARIA roles used must conform to valid values)

        For more info, visit https://dequeuniversity.com/rules/axe/4.9/aria-roles?application=axeAPI.

        Check these nodes:

        - html: <button role="wut-the-wut"></button>
          summary: Fix all of the following:
                     Role must be one of the valid ARIA roles: wut-the-wut

     2. button-name (Buttons must have discernible text)

        For more info, visit https://dequeuniversity.com/rules/axe/4.9/button-name?application=axeAPI.

        Check these nodes:

        - html: <button role="wut-the-wut"></button>
          summary: Fix any of the following:
                     Element does not have inner text that is visible to screen readers
                     aria-label attribute does not exist or is empty
                     aria-labelledby attribute does not exist, references elements that do not exist or references elements that are empty
                     Element has no title attribute
                     Element's default semantics were not overridden with role="none" or role="presentation"
  

  9) simple
       Failure No Discernible Text And Invalid Role Disabled One Rule:
     Detected the following accessibility violations!

     1. button-name (Buttons must have discernible text)

        For more info, visit https://dequeuniversity.com/rules/axe/4.9/button-name?application=axeAPI.

        Check these nodes:

        - html: <button role="wut-the-wut"></button>
          summary: Fix any of the following:
                     Element does not have inner text that is visible to screen readers
                     aria-label attribute does not exist or is empty
                     aria-labelledby attribute does not exist, references elements that do not exist or references elements that are empty
                     Element has no title attribute
                     Element's default semantics were not overridden with role="none" or role="presentation"
  



"
`;

exports[`fails only specific impact levels if specified 1`] = `
"
> storybook-for-react-integration-tests@3.1.0 storybook:axeOnly
> axe-storybook --failing-impact critical

Serving up 🍕 static storybook build at: http://127.0.0.1:8000

[chromium] accessibility
  advanced
    ✔ Branding

  autoTitles
    ✔ No Failures

  delays
    ✔ Short Delay And Pass
    1) Short Delay And Fail
    ✔ Medium Delay And Pass
    2) Medium Delay And Fail
    3) Medium Delay And Short Timeout Fail
    4) Long Delay And Timeout

  simple
    ✔ No Failures
    5) Failure No Discernible Text
    ✔ Failure Color Contrast
    6) Failure No Discernible Text And Invalid Role
    - Failure Color Contrast Skipped
    - No Failures Warn
    - Failure Color Contrast Warn
    - Failure No Discernible Text Warn
    - Failure Color Contrast Off
    - Failure No Discernible Text And Invalid Role Skipped
    ✔ Failure Color Contrast Disabled Rule
    7) Failure No Discernible Text And Invalid Role Disabled One Rule
    ✔ Failure No Discernible Text And Invalid Role Disabled Rules

1 violations were detected in stories with "mode" set to "warn", so did not fail the test suite:

 Error: simple / Failure No Discernible Text Warn / Detected the following accessibility violations!

     1. button-name (Buttons must have discernible text)

        For more info, visit https://dequeuniversity.com/rules/axe/4.9/button-name?application=axeAPI.

        Check these nodes:

        - html: <button></button>
          summary: Fix any of the following:
                     Element does not have inner text that is visible to screen readers
                     aria-label attribute does not exist or is empty
                     aria-labelledby attribute does not exist, references elements that do not exist or references elements that are empty
                     Element has no title attribute
                     Element's default semantics were not overridden with role="none" or role="presentation"

  8 passing
  6 pending
  7 failing

  1) delays
       Short Delay And Fail:
     Detected the following accessibility violations!

     1. aria-roles (ARIA roles used must conform to valid values)

        For more info, visit https://dequeuniversity.com/rules/axe/4.9/aria-roles?application=axeAPI.

        Check these nodes:

        - html: <button id="hi" role="wut-the-wut">hello world</button>
          summary: Fix all of the following:
                     Role must be one of the valid ARIA roles: wut-the-wut
  

  2) delays
       Medium Delay And Fail:
     Detected the following accessibility violations!

     1. aria-roles (ARIA roles used must conform to valid values)

        For more info, visit https://dequeuniversity.com/rules/axe/4.9/aria-roles?application=axeAPI.

        Check these nodes:

        - html: <button id="hi" role="wut-the-wut">hello world</button>
          summary: Fix all of the following:
                     Role must be one of the valid ARIA roles: wut-the-wut
  

  3) delays
       Medium Delay And Short Timeout Fail:
     Error: Timeout of 100ms exceeded. For async tests and hooks, ensure "done()" is called; if returning a Promise, ensure it resolves.
      at listOnTimeout (node:internal/timers)
      at processTimers (node:internal/timers)

  4) delays
       Long Delay And Timeout:
     Error: Timeout of 2000ms exceeded. For async tests and hooks, ensure "done()" is called; if returning a Promise, ensure it resolves.
      at listOnTimeout (node:internal/timers)
      at processTimers (node:internal/timers)

  5) simple
       Failure No Discernible Text:
     Detected the following accessibility violations!

     1. button-name (Buttons must have discernible text)

        For more info, visit https://dequeuniversity.com/rules/axe/4.9/button-name?application=axeAPI.

        Check these nodes:

        - html: <button></button>
          summary: Fix any of the following:
                     Element does not have inner text that is visible to screen readers
                     aria-label attribute does not exist or is empty
                     aria-labelledby attribute does not exist, references elements that do not exist or references elements that are empty
                     Element has no title attribute
                     Element's default semantics were not overridden with role="none" or role="presentation"
  

  6) simple
       Failure No Discernible Text And Invalid Role:
     Detected the following accessibility violations!

     1. aria-roles (ARIA roles used must conform to valid values)

        For more info, visit https://dequeuniversity.com/rules/axe/4.9/aria-roles?application=axeAPI.

        Check these nodes:

        - html: <button role="wut-the-wut"></button>
          summary: Fix all of the following:
                     Role must be one of the valid ARIA roles: wut-the-wut

     2. button-name (Buttons must have discernible text)

        For more info, visit https://dequeuniversity.com/rules/axe/4.9/button-name?application=axeAPI.

        Check these nodes:

        - html: <button role="wut-the-wut"></button>
          summary: Fix any of the following:
                     Element does not have inner text that is visible to screen readers
                     aria-label attribute does not exist or is empty
                     aria-labelledby attribute does not exist, references elements that do not exist or references elements that are empty
                     Element has no title attribute
                     Element's default semantics were not overridden with role="none" or role="presentation"
  

  7) simple
       Failure No Discernible Text And Invalid Role Disabled One Rule:
     Detected the following accessibility violations!

     1. button-name (Buttons must have discernible text)

        For more info, visit https://dequeuniversity.com/rules/axe/4.9/button-name?application=axeAPI.

        Check these nodes:

        - html: <button role="wut-the-wut"></button>
          summary: Fix any of the following:
                     Element does not have inner text that is visible to screen readers
                     aria-label attribute does not exist or is empty
                     aria-labelledby attribute does not exist, references elements that do not exist or references elements that are empty
                     Element has no title attribute
                     Element's default semantics were not overridden with role="none" or role="presentation"
  



"
`;

exports[`filters the components to run 1`] = `
"
> storybook-for-react-integration-tests@3.1.0 storybook:axeOnly
> axe-storybook --pattern simple

Serving up 🍕 static storybook build at: http://127.0.0.1:8000

[chromium] accessibility
  advanced
    - Branding

  autoTitles
    - No Failures

  delays
    - Short Delay And Pass
    - Short Delay And Fail
    - Medium Delay And Pass
    - Medium Delay And Fail
    - Medium Delay And Short Timeout Fail
    - Long Delay And Timeout

  simple
    ✔ No Failures
    1) Failure No Discernible Text
    2) Failure Color Contrast
    3) Failure No Discernible Text And Invalid Role
    - Failure Color Contrast Skipped
    - No Failures Warn
    - Failure Color Contrast Warn
    - Failure No Discernible Text Warn
    - Failure Color Contrast Off
    - Failure No Discernible Text And Invalid Role Skipped
    ✔ Failure Color Contrast Disabled Rule
    4) Failure No Discernible Text And Invalid Role Disabled One Rule
    ✔ Failure No Discernible Text And Invalid Role Disabled Rules

2 violations were detected in stories with "mode" set to "warn", so did not fail the test suite:

 Error: simple / Failure Color Contrast Warn / Detected the following accessibility violations!

     1. color-contrast (Elements must meet minimum color contrast ratio thresholds)

        For more info, visit https://dequeuniversity.com/rules/axe/4.9/color-contrast?application=axeAPI.

        Check these nodes:

        - html: <button style="background-color: red; color: hotpink;">hello world</button>
          summary: Fix any of the following:
                     Element has insufficient color contrast of 1.51 (foreground color: #ff69b4, background color: #ff0000, font size: 10.0pt (13.3333px), font weight: normal). Expected contrast ratio of 4.5:1

Error: simple / Failure No Discernible Text Warn / Detected the following accessibility violations!

     1. button-name (Buttons must have discernible text)

        For more info, visit https://dequeuniversity.com/rules/axe/4.9/button-name?application=axeAPI.

        Check these nodes:

        - html: <button></button>
          summary: Fix any of the following:
                     Element does not have inner text that is visible to screen readers
                     aria-label attribute does not exist or is empty
                     aria-labelledby attribute does not exist, references elements that do not exist or references elements that are empty
                     Element has no title attribute
                     Element's default semantics were not overridden with role="none" or role="presentation"

  3 passing
  14 pending
  4 failing

  1) simple
       Failure No Discernible Text:
     Detected the following accessibility violations!

     1. button-name (Buttons must have discernible text)

        For more info, visit https://dequeuniversity.com/rules/axe/4.9/button-name?application=axeAPI.

        Check these nodes:

        - html: <button></button>
          summary: Fix any of the following:
                     Element does not have inner text that is visible to screen readers
                     aria-label attribute does not exist or is empty
                     aria-labelledby attribute does not exist, references elements that do not exist or references elements that are empty
                     Element has no title attribute
                     Element's default semantics were not overridden with role="none" or role="presentation"
  

  2) simple
       Failure Color Contrast:
     Detected the following accessibility violations!

     1. color-contrast (Elements must meet minimum color contrast ratio thresholds)

        For more info, visit https://dequeuniversity.com/rules/axe/4.9/color-contrast?application=axeAPI.

        Check these nodes:

        - html: <button style="background-color: red; color: hotpink;">hello world</button>
          summary: Fix any of the following:
                     Element has insufficient color contrast of 1.51 (foreground color: #ff69b4, background color: #ff0000, font size: 10.0pt (13.3333px), font weight: normal). Expected contrast ratio of 4.5:1
  

  3) simple
       Failure No Discernible Text And Invalid Role:
     Detected the following accessibility violations!

     1. aria-roles (ARIA roles used must conform to valid values)

        For more info, visit https://dequeuniversity.com/rules/axe/4.9/aria-roles?application=axeAPI.

        Check these nodes:

        - html: <button role="wut-the-wut"></button>
          summary: Fix all of the following:
                     Role must be one of the valid ARIA roles: wut-the-wut

     2. button-name (Buttons must have discernible text)

        For more info, visit https://dequeuniversity.com/rules/axe/4.9/button-name?application=axeAPI.

        Check these nodes:

        - html: <button role="wut-the-wut"></button>
          summary: Fix any of the following:
                     Element does not have inner text that is visible to screen readers
                     aria-label attribute does not exist or is empty
                     aria-labelledby attribute does not exist, references elements that do not exist or references elements that are empty
                     Element has no title attribute
                     Element's default semantics were not overridden with role="none" or role="presentation"
  

  4) simple
       Failure No Discernible Text And Invalid Role Disabled One Rule:
     Detected the following accessibility violations!

     1. button-name (Buttons must have discernible text)

        For more info, visit https://dequeuniversity.com/rules/axe/4.9/button-name?application=axeAPI.

        Check these nodes:

        - html: <button role="wut-the-wut"></button>
          summary: Fix any of the following:
                     Element does not have inner text that is visible to screen readers
                     aria-label attribute does not exist or is empty
                     aria-labelledby attribute does not exist, references elements that do not exist or references elements that are empty
                     Element has no title attribute
                     Element's default semantics were not overridden with role="none" or role="presentation"
  



"
`;

exports[`outputs accessibility violation information for the demo app 1`] = `
"
> storybook-for-react-integration-tests@3.1.0 storybook:axeOnly
> axe-storybook

Serving up 🍕 static storybook build at: http://127.0.0.1:8000

[chromium] accessibility
  advanced
    1) Branding

  autoTitles
    ✔ No Failures

  delays
    ✔ Short Delay And Pass
    2) Short Delay And Fail
    ✔ Medium Delay And Pass
    3) Medium Delay And Fail
    4) Medium Delay And Short Timeout Fail
    5) Long Delay And Timeout

  simple
    ✔ No Failures
    6) Failure No Discernible Text
    7) Failure Color Contrast
    8) Failure No Discernible Text And Invalid Role
    - Failure Color Contrast Skipped
    - No Failures Warn
    - Failure Color Contrast Warn
    - Failure No Discernible Text Warn
    - Failure Color Contrast Off
    - Failure No Discernible Text And Invalid Role Skipped
    ✔ Failure Color Contrast Disabled Rule
    9) Failure No Discernible Text And Invalid Role Disabled One Rule
    ✔ Failure No Discernible Text And Invalid Role Disabled Rules

2 violations were detected in stories with "mode" set to "warn", so did not fail the test suite:

 Error: simple / Failure Color Contrast Warn / Detected the following accessibility violations!

     1. color-contrast (Elements must meet minimum color contrast ratio thresholds)

        For more info, visit https://dequeuniversity.com/rules/axe/4.9/color-contrast?application=axeAPI.

        Check these nodes:

        - html: <button style="background-color: red; color: hotpink;">hello world</button>
          summary: Fix any of the following:
                     Element has insufficient color contrast of 1.51 (foreground color: #ff69b4, background color: #ff0000, font size: 10.0pt (13.3333px), font weight: normal). Expected contrast ratio of 4.5:1

Error: simple / Failure No Discernible Text Warn / Detected the following accessibility violations!

     1. button-name (Buttons must have discernible text)

        For more info, visit https://dequeuniversity.com/rules/axe/4.9/button-name?application=axeAPI.

        Check these nodes:

        - html: <button></button>
          summary: Fix any of the following:
                     Element does not have inner text that is visible to screen readers
                     aria-label attribute does not exist or is empty
                     aria-labelledby attribute does not exist, references elements that do not exist or references elements that are empty
                     Element has no title attribute
                     Element's default semantics were not overridden with role="none" or role="presentation"

  6 passing
  6 pending
  9 failing

  1) advanced
       Branding:
     Detected the following accessibility violations!

     1. color-contrast (Elements must meet minimum color contrast ratio thresholds)

        For more info, visit https://dequeuniversity.com/rules/axe/4.9/color-contrast?application=my-branding.

        Check these nodes:

        - html: <button style="background-color: red; color: hotpink;">hello world</button>
          summary: Fix any of the following:
                     Element has insufficient color contrast of 1.51 (foreground color: #ff69b4, background color: #ff0000, font size: 10.0pt (13.3333px), font weight: normal). Expected contrast ratio of 4.5:1
  

  2) delays
       Short Delay And Fail:
     Detected the following accessibility violations!

     1. aria-roles (ARIA roles used must conform to valid values)

        For more info, visit https://dequeuniversity.com/rules/axe/4.9/aria-roles?application=axeAPI.

        Check these nodes:

        - html: <button id="hi" role="wut-the-wut">hello world</button>
          summary: Fix all of the following:
                     Role must be one of the valid ARIA roles: wut-the-wut
  

  3) delays
       Medium Delay And Fail:
     Detected the following accessibility violations!

     1. aria-roles (ARIA roles used must conform to valid values)

        For more info, visit https://dequeuniversity.com/rules/axe/4.9/aria-roles?application=axeAPI.

        Check these nodes:

        - html: <button id="hi" role="wut-the-wut">hello world</button>
          summary: Fix all of the following:
                     Role must be one of the valid ARIA roles: wut-the-wut
  

  4) delays
       Medium Delay And Short Timeout Fail:
     Error: Timeout of 100ms exceeded. For async tests and hooks, ensure "done()" is called; if returning a Promise, ensure it resolves.
      at listOnTimeout (node:internal/timers)
      at processTimers (node:internal/timers)

  5) delays
       Long Delay And Timeout:
     Error: Timeout of 2000ms exceeded. For async tests and hooks, ensure "done()" is called; if returning a Promise, ensure it resolves.
      at listOnTimeout (node:internal/timers)
      at processTimers (node:internal/timers)

  6) simple
       Failure No Discernible Text:
     Detected the following accessibility violations!

     1. button-name (Buttons must have discernible text)

        For more info, visit https://dequeuniversity.com/rules/axe/4.9/button-name?application=axeAPI.

        Check these nodes:

        - html: <button></button>
          summary: Fix any of the following:
                     Element does not have inner text that is visible to screen readers
                     aria-label attribute does not exist or is empty
                     aria-labelledby attribute does not exist, references elements that do not exist or references elements that are empty
                     Element has no title attribute
                     Element's default semantics were not overridden with role="none" or role="presentation"
  

  7) simple
       Failure Color Contrast:
     Detected the following accessibility violations!

     1. color-contrast (Elements must meet minimum color contrast ratio thresholds)

        For more info, visit https://dequeuniversity.com/rules/axe/4.9/color-contrast?application=axeAPI.

        Check these nodes:

        - html: <button style="background-color: red; color: hotpink;">hello world</button>
          summary: Fix any of the following:
                     Element has insufficient color contrast of 1.51 (foreground color: #ff69b4, background color: #ff0000, font size: 10.0pt (13.3333px), font weight: normal). Expected contrast ratio of 4.5:1
  

  8) simple
       Failure No Discernible Text And Invalid Role:
     Detected the following accessibility violations!

     1. aria-roles (ARIA roles used must conform to valid values)

        For more info, visit https://dequeuniversity.com/rules/axe/4.9/aria-roles?application=axeAPI.

        Check these nodes:

        - html: <button role="wut-the-wut"></button>
          summary: Fix all of the following:
                     Role must be one of the valid ARIA roles: wut-the-wut

     2. button-name (Buttons must have discernible text)

        For more info, visit https://dequeuniversity.com/rules/axe/4.9/button-name?application=axeAPI.

        Check these nodes:

        - html: <button role="wut-the-wut"></button>
          summary: Fix any of the following:
                     Element does not have inner text that is visible to screen readers
                     aria-label attribute does not exist or is empty
                     aria-labelledby attribute does not exist, references elements that do not exist or references elements that are empty
                     Element has no title attribute
                     Element's default semantics were not overridden with role="none" or role="presentation"
  

  9) simple
       Failure No Discernible Text And Invalid Role Disabled One Rule:
     Detected the following accessibility violations!

     1. button-name (Buttons must have discernible text)

        For more info, visit https://dequeuniversity.com/rules/axe/4.9/button-name?application=axeAPI.

        Check these nodes:

        - html: <button role="wut-the-wut"></button>
          summary: Fix any of the following:
                     Element does not have inner text that is visible to screen readers
                     aria-label attribute does not exist or is empty
                     aria-labelledby attribute does not exist, references elements that do not exist or references elements that are empty
                     Element has no title attribute
                     Element's default semantics were not overridden with role="none" or role="presentation"
  



"
`;
